load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/ProdriveTechnologies/hpraid_exporter
gazelle(
    name = "gazelle",
)

go_library(
    name = "go_default_library",
    srcs = ["hpraid_exporter.go"],
    importpath = "github.com/ProdriveTechnologies/hpraid_exporter",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_common//log:go_default_library",
    ],
)

go_binary(
    name = "hpraid_exporter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
